# volumential

./: .flake8  pyproject.toml
benchmarks/: scalar_field.py  table_build.py
contrib/table_builders/: laplace3d_table_builder.py
doc/: Makefile
doc/source/: conf.py
examples/: laplace2d.py  laplace3d.py
experiments/: sep.py  volume_potential_2d_derivatives.py  volume_potential_3d_derivatives.py
test/: conftest.py  test_cahn_hilliard.py  test_function_extension.py  test_interpolation.py  test_laplace.py  test_nearfield_interaction_completeness.py  test_nearfield_potential_table.py  test_singular_integral_2d.py  test_volume_fmm.py
volumential/: __init__.py  droste.py  expansion_wrangler_fpnd.py  interpolation.py  list1.py  list1_gallery.py  nearfield_potential_table.py  singular_integral_2d.py  symbolic.py  table_manager.py  tools.py  version.py  volume_fmm.py
