[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63",
]

[project]
name = "volumential"
version = "2017.1"
description = "Volume potential computation powered by FMM"
readme = "README.md"
authors = [
    { name = "Xiaoyu Wei", email = "wxy0516@gmail.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "pytential>=2020.2",
    "h5py>=3.10",
]

[project.optional-dependencies]
gmsh = [
    "gmsh_interop>=2024.1",
]
test = [
    "pytest",
    "ruff",
]
doc = [
    "sphinx-rtd-theme",
    "sphinx>=4",
]

[project.urls]
Documentation = "https://xiaoyu-wei.com/docs/volumential"
Repository = "https://github.com/xywei/volumential"

[tool.setuptools.packages.find]
include = [
    "volumential*",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
preview = true
extend-select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "G",    # flake8-logging-format
    "I",    # flake8-isort
    "N",    # pep8-naming
    "NPY",  # numpy
    "Q",    # flake8-quotes
    # "RUF",  # ruff
    # "UP",   # pyupgrade
    "W",    # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E265", # block comment should start with #
    "E402", # module level import not at the top of file
]
exclude = [
    "volumential/meshgen.py",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = [
    "pytools",
    "pyopencl",
    "loopy",
    "modepy",
    "pymbolic",
    "boxtree",
    "pytential",
    "sumpy",
    "meshmode",
]
known-local-folder = ["volumential"]
lines-after-imports = 2
combine-as-imports = true
